--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,11 @@
     <groupId>org.drools.persistence.ignite</groupId>
     <artifactId>drools-jbpm-ignite</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <dependencies>
         <dependency>
             <groupId>org.apache.ignite</groupId>
             <artifactId>ignite-core</artifactId>
-            <version>1.5.1.final-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.ignite</groupId>
-            <artifactId>ignite-spring</artifactId>
-            <version>1.5.1.final-SNAPSHOT</version>
+            <version>1.6.0</version>
         </dependency>
         <dependency>
             <groupId>org.drools</groupId>
